# AiEDA

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  pyproject.toml  train_transgnn_wirelength.py
aieda/: __init__.py
aieda/ai/: __init__.py  config_base.py  design_utils.py  evaluate_base.py  inst_utils.py  model_base.py  net_utils.py  patch_utils.py  pattern_utils.py  process_base.py  trainer_base.py
aieda/ai/design_parameter_optimization/: dse_facade.py  model.py
aieda/ai/graph_delay_predict/: gnn_delay_config.py  gnn_delay_model.py  gnn_delay_process.py  gnn_transformer_trainer.py
aieda/ai/net_wirelength_predict/: __init__.py  tabnet_config.py  tabnet_model.py  tabnet_process.py  tabnet_trainer.py
aieda/ai/path_delay_predict/: transformer_config.py  transformer_model.py
aieda/ai/transGNN/: __init__.py  dataset.py  model.py  train.py
aieda/analysis/: __init__.py  base.py  design.py  net.py  patch.py  path.py  utility.py
aieda/data/: __init__.py  feature.py  vectors.py
aieda/data/database/: __init__.py  eda.py  enum.py  parameters.py  vectors.py
aieda/data/io/: __init__.py  feature_io.py  vectors_io.py
aieda/eda/: __init__.py
aieda/eda/iEDA/: base.py  cts.py  drc.py  evaluation.py  floorplan.py  gds.py  io.py  net_opt.py  pdn.py  placement.py  routing.py  sta.py  timing_opt.py  vectorization.py
aieda/flows/: __init__.py  base.py  data.py  ieda.py
aieda/gui/: __init__.py  basic.py  chip.py  chip3d.py  flows.py  info.py  layer.py  layout.py  net.py  patch.py  patches.py  workspace.py  workspaces.py
aieda/gui/3d/: chip.html  package-lock.json  package.json  sample_data.json  server.js
aieda/report/: __init__.py  generator.py
aieda/report/module/: __init__.py  base.py  design.py  flow.py  foundry.py  summary.py  vectors.py
aieda/utility/: __init__.py  folder_permission.py  json_parser.py  log.py
aieda/workspace/: __init__.py  workspace.py
aieda/workspace/config/: __init__.py  json_flow.py  json_ieda_config.py  json_parameters.py  json_path.py  json_workspace.py
docs/api/: iEDA_config.md  iEDA_config_en.md  ieda_python_api_summary.md  ieda_python_api_summary_en.md  workspace.md  workspace_en.md
example/: README.md  README_EN.md
path_delay_predict/: transformer_process.py  transformer_trainer.py
test/: batch_extract_README.md  batch_extract_place_features.py  batch_extract_route_features.py  batch_run_all_designs.py  design_list.json  import_aieda.py  process_sdc_files.py  synth_sky130_aes.py  test_ai_task_dse.py  test_ai_task_placement.py  test_ai_task_wirelength_auto.py  test_analysis_design.py  test_analysis_net.py  test_analysis_patch.py  test_analysis_path.py  test_ieda_evaluation.py  test_ieda_feature.py  test_ieda_flows.py  test_ieda_gui.py  test_ieda_steps.py  test_ieda_vectors.py  test_parameters.py  test_report.py  test_sky130.py  test_sky130_aes.py  test_sky130_gcd.py  test_sky130_gcd_dse.py  test_sky130_gcd_place.py  test_sky130_place.py  test_sky130_ppa_map.py  test_sky130_route_data.py  test_workspace.py
(+1796 files in other folders)
